# competitive-cpp

./: .gitignore  CMakeLists.txt  README.md  a.cpp  archive.cpp  archive_icpc  current.cpp  main.cpp  tc_gen.cpp  template.cpp
CodeChef Practice/: ATM - HS08TEST.cpp  The Lead Game - TLG.cpp  [WIP] Bytelandian gold coins - COINS.cpp
ICO/: Calvin's Game - INOI1301.cpp  Highway Bypass - INOI1401.cpp  IPL - ZCO14004.cpp  Little Red Riding Hood - ZCO13002.cpp  Round Table - ZCO12004.cpp  Sequence Land - INOI1302.cpp  Smart Phone - ZCO14003.cpp  Table Sum - INOI1202.cpp  Tournament - ZCO13001.cpp  Video Game - ZCO14001.cpp  Wormholes - ZCO12002.cpp  [WIP] Road Trips and Museums - ROADTRIP.cpp
INOI/: Road Trips and Museums - ROADTRIP.cpp  Triathlon - INOI1201.cpp  [WIP] Two Paths - TWOPATHS.cpp
INOIPRAC/: Calvin's Game - INOI1301.cpp  Free Ticket - INOI1402.cpp  Highway Bypass - INOI1401.cpp  Table Sum - INOI1202.cpp  Training - TINOI17B.cpp  Triathlon - INOI1201.cpp  Wealth Disparity - INOI1601.cpp  [WIP] Fence - TINOI17A.cpp  [WIP] Special Sums - INOI1501.cpp
UVa/: 11172 - Relational Operator.cpp  11498 - Division of Nlogonia .cpp  11727 - Cost Cutting.cpp
ZCO/: SUPW - ZCO14002.cpp
ZCOPRAC/: Bookshelves - ZCO16001.cpp  Variation - ZCO15002.cpp  Video Game - ZCO14001.cpp  Weird Ordering - ZCO20001.cpp  Wormholes - ZCO12002.cpp  [WIP] UpDown Sequences - ZCO2019 - UPDOWNSEQ.cpp
techniques/: 1878E_sparse_table.cpp  [TODO] reverse_string_rope_example.cpp  [WIP 1] lazy_segtree_HC_2023R1.cpp  efficient_insertions_rope_example.cpp
utils/: data_structs.cpp  (+1 more)
(+606 files in other folders)
